Blender crash when rendering in terminal mode #35493

Closed
opened 2013-05-24 09:24:29 +02:00 by johan tri handoyo · 3 comments

%%%--- Ubuntu 12.04 64bit, NVIDIA GTX 650 ---

- Blender version with error = 2.67a, and version that worked = 2.67---


- it is imidiate crash when i try to render in freestyle in terminal (command line mode) ---


- i got this error message ---

Blender 2.67 (sub 1), Revision: 56914

backtrace

./blender() [0xf4b139]
./blender() [0xf4b377]
/lib/x86_64-linux-gnu/libc.so.6(+0x364a0) [0x7fd648f944a0]
./blender(ED_render_scene_update+0x84) [0x1099dc4]
./blender(DAG_ids_check_recalc+0x6a) [0x14d93aa]
./blender(BKE_scene_update_for_newframe+0x12b) [0x147206b]
./blender(RE_Database_FromScene+0x229) [0x12a58f9]
./blender() [0x12b3e03]
./blender() [0x12b411d]
./blender(RE_RenderFreestyleStrokes+0x32) [0x12b5512]
./blender(_ZN9Freestyle21BlenderStrokeRenderer11RenderSceneEP6Render+0x62) [0x188f602]
./blender(_ZN9Freestyle10Controller13RenderStrokesEP6Render+0x9d) [0x1888ecd]
./blender(FRS_do_stroke_rendering+0x139) [0x18291a9]
./blender() [0x12b194e]
./blender() [0x12b3ebd]
./blender() [0x12b411d]
./blender() [0x12b56e7]
./blender(RE_BlenderAnim+0x3bb) [0x12b61eb]
./blender() [0xf4be97]
./blender(BLI_argsParse+0xc7) [0x1812c47]
./blender(main+0x231) [0xf4d5ec]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7fd648f7f76d]
./blender() [0xe89825]%%%

%%%--- Ubuntu 12.04 64bit, NVIDIA GTX 650 --- - Blender version with error = 2.67a, and version that worked = 2.67--- - it is imidiate crash when i try to render in freestyle in terminal (command line mode) --- - i got this error message --- # Blender 2.67 (sub 1), Revision: 56914 # backtrace ./blender() [0xf4b139] ./blender() [0xf4b377] /lib/x86_64-linux-gnu/libc.so.6(+0x364a0) [0x7fd648f944a0] ./blender(ED_render_scene_update+0x84) [0x1099dc4] ./blender(DAG_ids_check_recalc+0x6a) [0x14d93aa] ./blender(BKE_scene_update_for_newframe+0x12b) [0x147206b] ./blender(RE_Database_FromScene+0x229) [0x12a58f9] ./blender() [0x12b3e03] ./blender() [0x12b411d] ./blender(RE_RenderFreestyleStrokes+0x32) [0x12b5512] ./blender(_ZN9Freestyle21BlenderStrokeRenderer11RenderSceneEP6Render+0x62) [0x188f602] ./blender(_ZN9Freestyle10Controller13RenderStrokesEP6Render+0x9d) [0x1888ecd] ./blender(FRS_do_stroke_rendering+0x139) [0x18291a9] ./blender() [0x12b194e] ./blender() [0x12b3ebd] ./blender() [0x12b411d] ./blender() [0x12b56e7] ./blender(RE_BlenderAnim+0x3bb) [0x12b61eb] ./blender() [0xf4be97] ./blender(BLI_argsParse+0xc7) [0x1812c47] ./blender(main+0x231) [0xf4d5ec] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7fd648f7f76d] ./blender() [0xe89825]%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev56994 . Thanks for the report, closing.%%%

%%%Fixed in svn rev56994 . Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35493
No description provided.