source/blender/render/intern/source/pipeline.c
@@ -1640,6 +1640,15 @@ static void add_freestyle(Render *re)
 
 	actsrl = BLI_findlink(&re->r.layers, re->r.actlay);
 
+	/* We use the same window manager for freestyle bmain as
+	 * real bmain uses. This is needed because freestyle's
+	 * bmain could be used to tag scenes for update, which
+	 * implies call of ED_render_scene_update in some cases
+	 * and that function requires proper windoew manager
+	 * to present (sergey)
+	 */
+	re->freestyle_bmain.wm = re->main->wm;
+
 	FRS_init_stroke_rendering(re);
 
 	for (srl= (SceneRenderLayer *)re->r.layers.first; srl; srl= srl->next) {
